examples/test/testpolicy455.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy455
  namespace: namespace213
spec:
  podSelector:
    matchLabels:
      key43: value43
      key38: value25
      key18: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value0
          key6: value47
      podSelector:
        matchLabels:
          key40: value33
